# Asteroids

./: CMakeLists.txt  config.sh  run.sh
src/: Class_structure  main.cpp
src/Asteroids/: Asteroids.cpp  Asteroids.h
src/Game/: Game.cpp  Game.h
src/Player/: Player.cpp  Player.h
src/Weapon/: Weapon.cpp  Weapon.h
